Fix layout issues and complete button styles

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,30 @@
 :root {
-  --color-primary: hsl(0, 0%, 100%);
-  --color-seccondary: rgb(212, 214, 222);
+  --color-primary: hsl(2, 83%, 63%);
+  --color-secondary: hsl(191, 62%, 74%);
+  --color-tertiary: hsl(48, 88%, 52%);
+
+  --color-accent-primary: hsl(0, 0%, 100%);
+  --color-accent-secondary: hsl(202, 4%, 61%);
+  --color-accent-tertiary: hsla(0, 0%, 73%, 0.306);
+
+  --button-brush: hsl(30, 40%, 70%);
+  --button-brush-text: hsl(0, 0%, 100%);
+  --button-rainbow: linear-gradient(
+    to right,
+    hsl(0, 70%, 75%),
+    hsl(30, 70%, 75%),
+    hsl(55, 70%, 75%),
+    hsl(130, 50%, 75%),
+    hsl(200, 60%, 75%),
+    hsl(260, 50%, 75%),
+    hsl(300, 50%, 80%)
+  );
+  --button-shading: hsl(0, 0%, 0%);
+  --button-lighten: hsl(0, 0%, 100%);
+  --button-eraser: hsl(350, 80%, 85%);
+  --button-eraser-text: hsl(345, 60%, 45%);
+  --button-clean: hsl(0, 0%, 100%);
+  --button-clean-text: hwb(0 47% 53%);
 }
 
 *,
@@ -22,6 +46,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
+  padding-block: 1rem;
 
   font-family: "Quicksand", sans-serif;
 
@@ -34,15 +60,22 @@ body {
   }
 }
 
+.heading {
+  color: var(--color-primary);
+  text-shadow: 0 0 1rem var(--color-accent-primary);
+  font-weight: bolder;
+  font-size: clamp(2rem, calc(2rem + 1vw), 3rem);
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: clamp(1rem, calc(1rem + 1vw), 2rem);
+  overflow: hidden;
 
-  background: var(--color-primary);
-  width: min(90vw, 40rem);
+  background: var(--color-accent-primary);
+  width: min(80vw, 50rem);
   border-radius: clamp(1.5rem, calc(1.5rem + 1vw), 3rem);
 
   &__icon {
@@ -55,74 +88,170 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    gap: 0.67rem;
+
     width: 100%;
+    background: var(--color-accent-tertiary);
+    padding: clamp(1rem, calc(1rem + 1vw), 2rem);
 
-    button {
-      border-radius: 0.5rem;
+    #color-picker {
+      width: clamp(5rem, calc(5rem + 5vw), 10rem);
+      height: clamp(5rem, calc(5rem + 4vw), 10rem);
       border: none;
-      width: min(80%, 12rem);
-
-      display: flex;
-      margin: 0.5rem;
-      padding: 0.4rem;
-      align-items: center;
-      justify-content: center;
-      gap: 0.2rem;
-
-      font-family: "Quicksand", sans-serif;
-      font-size: 0.8rem;
+      cursor: pointer;
     }
   }
 
   &__art-board {
     position: relative;
-    width: 100%;
+    width: clamp(20rem, calc(20rem + 2vw), 30rem);
     aspect-ratio: 1/1;
-    border: 1px solid black;
-    margin-block-start: 8%;
+    border: 1px solid var(--color-accent-secondary);
+
+    &-wrapper {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      padding: 4rem 2rem 2rem 2rem;
+    }
 
     &__box {
-      border: 1px solid black;
+      border: 1px solid var(--color-accent-secondary);
     }
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: -5%;
-      left: 50%;
-      transform: translateX(-50%);
+    &-clip {
+      &-primary {
+        position: absolute;
+        top: -10%;
+        left: 50%;
+        transform: translateX(-50%);
 
-      width: 70%;
-      height: 10%;
-      border-radius: 10rem 10rem 5rem 5rem;
-      background: rgb(187, 187, 187);
+        width: 70%;
+        height: 10%;
+        border-radius: 10rem 10rem 0 0;
+        background: var(--color-secondary);
+      }
+      &-secondary {
+        position: absolute;
+        top: -14%;
+        left: 50%;
+        transform: translateX(-50%);
+
+        width: 20%;
+        height: 10%;
+        border-radius: 10rem;
+        background: var(--color-accent-primary);
+        border: 0.6rem solid var(--color-secondary);
+      }
     }
+  }
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: -9%;
-      left: 50%;
-      transform: translateX(-50%);
+  &__button {
+    &--brush {
+      background: var(--button-brush);
+      color: var(--button-brush-text);
+    }
+    &--rainbow {
+      background: var(--button-rainbow);
 
-      width: 20%;
-      height: 10%;
-      border-radius: 10rem;
-      background: var(--color-primary);
-      border: 0.6rem solid rgb(187, 187, 187);
+      span:nth-child(1) {
+        color: hsl(55, 70%, 60%);
+      }
+      span:nth-child(2) {
+        color: hsl(300, 50%, 65%);
+      }
+      span:nth-child(3) {
+        color: hsl(200, 60%, 60%);
+      }
+      span:nth-child(4) {
+        color: hsl(0, 70%, 60%);
+      }
+      span:nth-child(5) {
+        color: hsl(130, 50%, 60%);
+      }
+      span:nth-child(6) {
+        color: hsl(260, 50%, 60%);
+      }
+      span:nth-child(7) {
+        color: hsl(30, 70%, 60%);
+      }
+      span:nth-child(8) {
+        color: hsl(200, 60%, 60%);
+      }
+      span:nth-child(9) {
+        color: hsl(55, 70%, 60%);
+      }
+      span:nth-child(10) {
+        color: hsl(0, 70%, 60%);
+        margin-inline-start: 0.5rem;
+      }
+      span:nth-child(11) {
+        color: hsl(130, 50%, 60%);
+      }
+      span:nth-child(12) {
+        color: hsl(300, 50%, 65%);
+      }
+      span:nth-child(13) {
+        color: hsl(30, 70%, 60%);
+      }
+    }
+    &--shading {
+      background: var(--button-shading);
+      color: var(--button-lighten);
+
+      &:hover {
+        filter: brightness(0.8) !important;
+      }
+    }
+    &--lighten {
+      background: var(--button-lighten);
+      color: var(--button-shading);
+
+      &:hover {
+        filter: brightness(0.95) !important;
+      }
+    }
+    &--eraser {
+      background: var(--button-eraser);
+      color: var(--button-eraser-text);
+    }
+    &--clean {
+      background: transparent;
+      border: 0.2rem solid var(--button-clean) !important;
+      color: var(--button-clean-text);
+    }
+  }
+
+  button {
+    border-radius: 0.5rem;
+    border: none;
+    width: min(80%, 12rem);
+    cursor: pointer;
+
+    display: flex;
+    padding: 0.4rem;
+    align-items: center;
+    justify-content: center;
+
+    font-family: "Quicksand", sans-serif;
+    font-size: 0.8rem;
+    font-weight: 600;
+
+    &:hover {
+      filter: brightness(1.08);
     }
   }
 }
 
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 45rem) {
   .container {
     flex-direction: row;
 
     &__controls {
+      max-width: 20rem;
       order: 1;
     }
-    &__art-board {
-      margin: 0;
+    &__art-board-wrapper {
       order: 2;
     }
   }
